--- a/src/gdal/CMakeLists.txt
+++ b/src/gdal/CMakeLists.txt
@@ -16,7 +16,8 @@
 #    You should have received a copy of the GNU General Public License
 #    along with OpenOrienteering.  If not, see <http://www.gnu.org/licenses/>.
 
-find_package(GDAL REQUIRED)
+#JU: Remove GDAL search
+#find_package(GDAL REQUIRED)
 find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
