--- a/3rd-party/clipper/CMakeLists.txt
+++ b/3rd-party/clipper/CMakeLists.txt
@@ -19,7 +19,7 @@
 
 project(Clipper)
 
-#JU: Ahanged cmake version and added CMP0135
+#JU: Changed cmake version and added CMP0135
 cmake_minimum_required(VERSION 3.5)
 cmake_policy(SET CMP0135 NEW)
 option(DOWNLOAD_EXTRACT_TIMESTAMP TRUE)
